# async_runtime

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
async_runtime/: CMakeLists.txt
async_runtime/include/: async_runtime.h
async_runtime/include/framework/: object.h  print.h
async_runtime/include/framework/basic/: change_notifier.h  duration.h  function.h  io.h  listenable.h  notification.h  observable.h  value_listenable.h  value_notifier.h
async_runtime/include/framework/contexts/: build_context.h  context.h  runtime_context.h
async_runtime/include/framework/elements/: element.h  stateful_element.h  stateless_element.h
async_runtime/include/framework/fundamental/: dispatcher.h  scheduler.h  thread_pool.h  timer.h
async_runtime/include/framework/widgets/: key.h  widget.h
async_runtime/src/: async_runtime.cpp  change_notifier.cpp  element.cpp  key.cpp  object.cpp  stateful_element.cpp  stateless_element.cpp  widget.cpp
async_runtime/src/basic/: change_notifier.cpp  duration.cpp  function.cpp  io.cpp  listenable.cpp  notification.cpp
async_runtime/src/elements/: element.cpp  inherited_element.cpp  leaf_element.cpp  multi_child_element.cpp  notification_listener_element.cpp  root_element.cpp  single_child_element.cpp  stateful_element.cpp  stateless_element.cpp
async_runtime/src/fundamental/: dispatcher.cpp  scheduler.cpp  thread_pool.cpp  timer.cpp
documents/: state_lifecycle.graphml  widget_tree_layout.graphml  widget_tree_lifecycle.graphml
include/: async_runtime.h
include/async_runtime/: object.h
include/async_runtime/basic/: change_notifier.h  container.h  duration.h  error.h  function.h  getter_setter.h  io.h  list.h  listenable.h  lock.h  not_implemented_error.h  notification.h  object.h  observable.h  ref.h  state.h  string.h  tree.h  value_listenable.h  value_notifier.h
include/async_runtime/basic/container/: list.h  map.h  set.h
include/async_runtime/basic/object/: cross_implement.h  declare.h  lateref.h  object.h  operators.h  option.h  option_implement.h  readme.md  ref.h  ref_implement.h  weak_ref.h
include/async_runtime/contexts/: build_context.h
include/async_runtime/elements/: build_context.h  context.h  element.h  inherited_element.h  key.h  lead_element.h  multi_child_element.h  named_multi_child_element.h  notification_listener_element.h  root_element.h  single_child_element.h  stateful_element.h  stateless_element.h
include/async_runtime/fundamental/: async.h  async_thread_pool.h  dispatcher.h  disposable.h  event_loop.h  file.h  future.h  http.h  logger.h  scheduler.h  state_helper.h  tcp.h  thread.h  thread_pool.h  timer.h  udp.h
include/async_runtime/fundamental/async/: async.h  async_snapshot.h  completer.h  future.h  readme.md  stream.h  stream_controller.h  stream_subscription.h  thread.h  thread_pool.h
include/async_runtime/io/: file.h  tcp.h  udp.h
include/async_runtime/object/: container.h  function.h  object.h  string.h
include/async_runtime/object/container/: cached_map_iterable.h  chain_iterable.h  cross_implement.h  declare.h  extern.h  iterable.h  iterator.h  iterator_wrapper_iterable.h  list.h  map.h  map_iterable.h  mixins.h  pair.h  readme.md  ref.h  reverse.h  reverse_iterable.h  set.h
include/async_runtime/object/object/: cross_implement.h  declare.h  hash.h  lateref.h  less.h  object.h  operators.h  option.h  option_implement.h  ref.h  ref_implement.h  weak_ref.h
include/async_runtime/object/string/: iterator.h  operators.h  ref.h  string.h  string_impl.h  string_native.h  string_static.h  string_view.h
include/async_runtime/utilities/: boolean.h  change_notifier.h  console_format.h  duration.h  getter_setter.h  listenable.h  lock.h  number.h  observable.h  value_listenable.h  value_notifier.h
include/async_runtime/utilities/number/: double.h  (+12 more)
include/async_runtime/widgets/: builder.h  future_builder.h  global_key.h  inherited_widget.h  key.h  leaf_widget.h  logger_widget.h  multi_child_widget.h  named_multi_child_widget.h  notification_listener.h  process.h  root_inherited_widget.h  root_widget.h  scheduler.h  state.h  stateful_builder.h  stateful_widget.h  stateless_widget.h  stream_builder.h  value_listenable_builder.h  widget.h
include/framework/: object.h
include/framework/basic/: duration.h  io.h  listenable.h
include/framework/contexts/: build_context.h  context.h  runtime_context.h
include/framework/elements/: element.h
include/framework/fundamental/: dispatcher.h  logger.h  scheduler.h  thread_pool.h  timer.h
include/framework/widgets/: builder.h  key.h  root_inherited_widget.h  value_listenable_builder.h  widget.h
src/: async_runtime.cpp  object.cpp
src/basic/: change_notifier.cpp  duration.cpp  io.cpp  listenable.cpp  lock.cpp  notification.cpp  object.cpp  string.cpp
src/contexts/: build_context.cpp
src/elements/: element.cpp  inherited_element.cpp  key.cpp  leaf_element.cpp  multi_child_element.cpp  named_multi_child_element.cpp  notification_listener_element.cpp  root_element.cpp  single_child_element.cpp  stateful_element.cpp  stateless_element.cpp
src/fundamental/: async.cpp  async_thread_pool.cpp  dispatcher.cpp  event_loop.cpp  file.cpp  http.cpp  logger.cpp  scheduler.cpp  state_helper.cpp  tcp.cpp  thread.cpp  thread_pool.cpp  timer.cpp  udp.cpp
src/io/: file.cpp  tcp.cpp  udp.cpp
src/object/: object.cpp  string.cpp  string_iterator.cpp  string_operators.cpp  string_view.cpp
src/utilities/: boolean.cpp  change_notifier.cpp  listenable.cpp  lock.cpp  number.cpp
src/widgets/: async_runtime.cpp  builder.cpp  inherited_widget.cpp  key.cpp  leaf_widget.cpp  logger_widget.cpp  multi_child_widget.cpp  named_multi_child_widget.cpp  notification_listener.cpp  process.cpp  root_inherited_widget.cpp  root_widget.cpp  scheduler.cpp  stateful_builder.cpp  stateful_widget.cpp  stateless_widget.cpp  widget.cpp
test/: main_activity.h  notification_test.h  periodic_output.h  test.cpp  test.h
test/test_basic/: test_callback.cpp
test/test_fundamental/: timer.cpp
test/test_widget/: multi_child_widget.cpp  stateless_widget.cpp
(+31 files in other folders)
